# aoc2023

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix
.github/workflows/: ci.yml
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  errors.rs  lib.rs  parse.rs
src/day2/: chumsky.rs  manual.rs
src/day7/: part1.rs  part2.rs
tests/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs
tests/common/: mod.rs
tests/resources/day6/: input2.txt
