[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "5.10.0", features = ["fancy"] }
thiserror = "1.0.50"
chumsky = "1.0.0-alpha.6"

[dev-dependencies]
indoc = "2.0.4"
